--- a/report/beamer/slides.tex
+++ b/report/beamer/slides.tex
@@ -79,7 +79,7 @@ $.
 \end{frame}
 
 \begin{frame}{How to solve redundancy?}
-The non prioritized solution is $\overline{x} = A^{\#}b$ if tasks not l.i. we need to accommodate conflicting tasks
+The non prioritized solution is $\overline{x} = A^{\#}b$ but we risk of introducing algorithmic singularities that affect all the tasks. Therefore, we need some way to accomodate between conflicting tasks
 \begin{enumerate}
 \item Siciliano and Slotine approach: task projection in null space of higher order task
 \item Flacco Matrix: separation of redundancy resolution from assignment of correct order
